syntax = "proto3";

package observability.schema;

message ElasticsearchField  {
    string type = 1; //all others type than keyword or text
    bool store = 2;
    bool index= 3;
    bool doc_values= 4;
}
message ElasticsearchFieldString {
    string type = 1; //keyword or text
    bool store = 2;
    bool index= 3;
    bool doc_values= 4;
    bool norms = 5;
}

